# Enlightment

./: gradle.properties  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/schemas/com.michaelzhan.enlightenment.logic.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/model/: yolov7-tiny.param
app/src/main/jni/: CMakeLists.txt  yolo.cpp  yolo.h  yoloncnn.cpp
app/src/main/res/drawable/: card_foreground.xml  ic_vector_drawable_add_or_more.xml  ic_vector_drawable_back.xml  ic_vector_drawable_choose_question_del.xml  ic_vector_drawable_choose_question_drag_tip.xml  ic_vector_drawable_choose_question_resize.xml  ic_vector_drawable_doubt.xml  ic_vector_drawable_edit.xml  ic_vector_drawable_format_bullet.xml  ic_vector_drawable_format_insert_link.xml  ic_vector_drawable_format_quote.xml  ic_vector_drawable_go.xml  ic_vector_drawable_menu.xml  ic_vector_drawable_nodata.xml  ic_vector_drawable_ok.xml  ic_vector_drawable_preview_image.xml  ic_vector_drawable_reword.xml  ic_vector_drawable_scan_line.xml  ic_vector_drawable_see.xml  ic_vector_drawable_setting.xml  ic_vector_drawable_take_photo.xml  ic_vector_drawable_todo_line.xml  id_vector_drawable_about.xml
app/src/main/res/layout/: activity_choose_subject.xml  activity_edit_a_question.xml  activity_edit_questions.xml  activity_get_question.xml  activity_main_page.xml  activity_questions_list.xml  activity_review_question.xml  activity_show_a_question.xml  activity_show_image.xml  text_subtitle.xml  (+19 more)
gradle/wrapper/: gradle-wrapper.properties
richtext/: build.gradle
(+78 files in other folders)
